--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="C:\Users\usuario\OneDrive\Documentos\Getskeleton\html5up-phantom\images\cabecalho.jpg">Home</a></li>
+							<li><a href="static/images/centralpequena.jpg">Home</a></li>
 							<li><a href="generic.html">Historico</a></li>
 							<li><a href="generic.html">Pontos turisticos</a></li>
 							<li><a href="generic.html">Localizacao</a></li>
@@ -57,7 +57,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="static/images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Auto e peças</h2>
@@ -68,7 +68,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="static/images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Para sua casa</h2>
@@ -79,7 +79,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="static/images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Eletronicos e celulares</h2>
@@ -90,7 +90,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="static/images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Musicas e hobbies</h2>
@@ -101,7 +101,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="static/images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Esporte e lazer</h2>
@@ -112,7 +112,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="static/images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Moda e beleza</h2>
@@ -123,7 +123,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="static/images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Agro e Industria</h2>
@@ -134,56 +134,12 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="static/images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Artigos infantis</h2>
 										<div class="content">
 											<p>Para os pequenos sempre na moda.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Animais de estimação</h2>
-										<div class="content">
-											<p>Seu melhor amiga agora pode contar conosco</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Comercio e escritorio</h2>
-										<div class="content">
-											<p>Estamos aqui para servi-lo.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -235,11 +191,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="static/assets/js/jquery.min.js"></script>
+			<script src="static/assets/js/browser.min.js"></script>
+			<script src="static/assets/js/breakpoints.min.js"></script>
+			<script src="static/assets/js/util.js"></script>
+			<script src="static/assets/js/main.js"></script>
 
 	</body>
 </html>
